--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.15",
     "@react-navigation/drawer": "^7.4.2",
     "@react-navigation/native": "^7.1.11",
@@ -18,6 +20,7 @@
     "axios": "^1.10.0",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-async-storage": "^0.0.1",
     "react-native-drawer-layout": "^4.1.11",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.26.0",
